# legalbot_ai

./: .env.example  .gitignore  README.md  docker-compose.local.yml  docker-compose.observability.yml  docker-compose.prod.yml  docker-compose.yml
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/storage/: vector_store.py
backend/services/: README.md  go.mod
backend/services/cmd/api/: main.go
backend/services/internal/billing/: wire.go
backend/services/internal/chat/: wire.go
backend/services/internal/middleware/: auth.go
backend/services/internal/orchestrator/: ask.go
backend/services/internal/proxy/: rag.go
backend/services/internal/ragclient/: client.go
backend/services/migrations/: 001_create_users_and_sessions.down.sql  001_create_users_and_sessions.up.sql  002_create_billing_tables.down.sql  002_create_billing_tables.up.sql  003_create_chat_tables.down.sql  003_create_chat_tables.up.sql
rag/: .dockerignore  Dockerfile  README.md  env.example  pyproject.toml
rag/app/: config.py  dependencies.py  logging_setup.py  main.py  middleware.py
rag/app/api/: analyze.py  answer.py  documents.py  ingest.py  report.py  schemas.py  search.py
rag/app/core/: chunking.py  embeddings.py  retrieval.py
rag/app/llm/: alice_provider.py  base.py  factory.py  gigachat.py  openai_provider.py
rag/app/prompts/: advertising.py  legal.py
rag/app/storage/: pgvector.py
rag/app/templates/report/: report.html
rag/samples/: docs.json
rag/scripts/: eval_embeddings.py
rag/scripts/experiments/: experiment_g1_search.py  experiment_g2_chunking.py  experiment_g3_extraction.py  generate_charts.py  ingest_all.py  report_utils.py
rag/scripts/experiments/h1_recovery/: analyze_logs.py  collect_corpus.py  corpus_h1.jsonl  run.py  (+1 more)
(+251 files in other folders)
