[project]
name = "legalbot-back"
version = "0.1.0"
description = ""
authors = [
    {name = "Ivan",email = "iskiba60@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.121.0,<0.122.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "pydantic (>=2.12.4,<3.0.0)",
    "sentence-transformers (>=5.1.2,<6.0.0)",
    "openai (>=2.7.1,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "python-docx (>=1.1.0,<1.2.0)",
    "python-multipart (>=0.0.9,<0.1.0)",
    "requests (>=2.32.0,<3.0.0)",
    "ruff (>=0.14.3,<0.15.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


